PPXDCS-19 Show list of agents dynamically loaded from the server

--- a/xdcs-frontend/src/app/agents/agents.component.html
+++ b/xdcs-frontend/src/app/agents/agents.component.html
@@ -1,3 +1,6 @@
-<p>
-  agents works!
-</p>
+<h2>Agents</h2>
+<ul class="heroes">
+  <li *ngFor="let agent of agents">
+    ID: {{agent.id}}, name: {{agent.displayName}}
+  </li>
+</ul>
