PPXDCS-39 Add basic styles

--- a/xdcs-frontend/src/app/app.component.html
+++ b/xdcs-frontend/src/app/app.component.html
@@ -7,3 +7,9 @@
 <input type="button" value="Click me!" (click)="test()"/>
 
 <router-outlet></router-outlet>
+
+<div class="container">
+  asdfsdfsdf
+  sdfsdfsdfsd
+  fsdfsdfsd
+</div>
