PPXDCS-32 Design a card

--- a/xdcs-frontend/src/app/app.component.html
+++ b/xdcs-frontend/src/app/app.component.html
@@ -9,7 +9,5 @@
 <router-outlet></router-outlet>
 
 <div class="container">
-  asdfsdfsdf
-  sdfsdfsdfsd
-  fsdfsdfsd
+  <app-node-cards></app-node-cards>
 </div>
