--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -1,2 +1,13 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "styles/basic";
+
+a, a:hover, a:visited, a:link, a:active, a:focus {
+  border: none;
+  text-decoration: none;
+  outline: none;
+}
+
+
+.transition-smooth {
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
