PPXDCS-34 Design the navbar

--- a/xdcs-frontend/src/app/app.component.html
+++ b/xdcs-frontend/src/app/app.component.html
@@ -1,10 +1,4 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-
-<input type="button" value="Click me!" (click)="test()"/>
+<app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
 
