--- a/xdcs-frontend/src/styles/global_mixins.less
+++ b/xdcs-frontend/src/styles/global_mixins.less
@@ -1,11 +1,11 @@
 @import "global_variables";
 
-.margin-centered() {
+.margin-centered {
   margin-left: auto;
   margin-right: auto;
 }
 
-.width-bound() {
+.width-bound {
   width: 100%;
 
   @media @tablet {
@@ -15,6 +15,11 @@
   @media @desktop {
     width: 940px;
   }
+}
+
+.container-bound {
+  .width-bound();
+  .margin-centered();
 }
 
 .theme(@theme-name) {
