PPXDCS-35 Create log in view

--- a/xdcs-frontend/src/app/element/navbar/navbar.component.html
+++ b/xdcs-frontend/src/app/element/navbar/navbar.component.html
@@ -18,6 +18,10 @@
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
+      <a routerLink="/sign-in"
+         [queryParams]="{redirect: router.url}"
+         class="btn btn-outline-primary nav-button"
+         role="button">Sign In</a>
     </div>
   </nav>
 </div>
