--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -2,12 +2,14 @@
 @import "styles/basic";
 
 a, a:hover, a:visited, a:link, a:active, a:focus {
-  border: none;
-  text-decoration: none;
   outline: none;
 }
 
-
 .transition-smooth {
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+}
+
+.btn:focus, .btn:active {
+  outline: none !important;
+  box-shadow: none;
 }
