--- a/xdcs-frontend/src/app/element/node-card/node-card.component.less
+++ b/xdcs-frontend/src/app/element/node-card/node-card.component.less
@@ -22,21 +22,15 @@ h5 {
   padding: 0;
 }
 
-.status {
-  margin-top: 0.2em;
-  margin-left: 0.2em;
-  margin-right: 1em;
-
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background-color: gray;
+.status-col {
+  fa-icon {
+    margin-right: 0.7em;
+  }
 }
 
-.online {
-  background-color: #05c60b;
-}
-
-.offline {
-  background-color: #ff0000;
+.details-col {
+  .card-text {
+    margin-bottom: 0;
+    color: gray;
+  }
 }
