--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -13,3 +13,28 @@ a, a:hover, a:visited, a:link, a:active, a:focus {
   outline: none !important;
   box-shadow: none;
 }
+
+#titanic {
+  float: none;
+
+  position: absolute;
+  bottom: 0;
+}
+
+.btn {
+  fa-icon {
+    margin-right: 0.5em;
+  }
+}
+
+.icon-warn {
+  color: #dbab09;
+}
+
+.icon-success {
+  color: #2cbe4e;
+}
+
+.icon-error {
+  color: #cb2431;
+}
