--- a/xdcs-frontend/src/app/view/home/home.component.html
+++ b/xdcs-frontend/src/app/view/home/home.component.html
@@ -1,3 +1,13 @@
 <div class="container">
+  <div class="headline">
+    <h2>Nodes</h2>
+  </div>
   <app-node-cards></app-node-cards>
+
+  <div class="headline">
+    <h2>Current tasks</h2>
+    <a href="#/task/new"
+       class="btn btn-outline-success float-right">New task</a>
+  </div>
+  <app-task-summary-list></app-task-summary-list>
 </div>
