--- a/xdcs-frontend/src/app/view/sign-in/sign-in.component.html
+++ b/xdcs-frontend/src/app/view/sign-in/sign-in.component.html
@@ -1,3 +1,4 @@
+<app-navbar [containerBound]="true"></app-navbar>
 <div class="card margin-centered shadow-lg">
   <div class="card-body">
     <form>
