--- a/xdcs-frontend/src/styles/global_mixins.less
+++ b/xdcs-frontend/src/styles/global_mixins.less
@@ -15,6 +15,14 @@
   @media @desktop {
     width: 940px;
   }
+
+  @media @large {
+    width: 1100px;
+  }
+
+  @media @xlarge {
+    width: 1320px;
+  }
 }
 
 .container-bound {
