--- a/xdcs-frontend/src/styles/basic/fonts.less
+++ b/xdcs-frontend/src/styles/basic/fonts.less
@@ -1,4 +1,5 @@
 @import (css) url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap');
+@import (css) url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 
 .fonts('basic') {
   @fnt-family-main: 'Roboto', 'Open Sans', sans-serif;
