--- a/xdcs-frontend/src/styles/basic/colors.less
+++ b/xdcs-frontend/src/styles/basic/colors.less
@@ -1,5 +1,4 @@
 .colors('basic') {
-  @cl-background: #fafafa;
+  @cl-background: white;
   @cl-font-main: #252525;
-  @cl-navbar-background: #eee;
 }
