--- a/xdcs-frontend/src/app/element/navbar/navbar.component.less
+++ b/xdcs-frontend/src/app/element/navbar/navbar.component.less
@@ -1,5 +1,5 @@
 :host {
-  background-color: #f0f0f0;
+  background-color: rgb(39, 39, 39);
   display: block;
   padding: 0;
   margin: 0 0 36px;
@@ -10,10 +10,20 @@ nav {
 }
 
 .navbar-brand {
-  font-size: 1.4em;
+  font-size: 2rem;
   margin: 0 42px 0 0;
+  font-weight: bold;
 }
 
 .nav-button {
   margin-left: 10px;
+}
+
+.nav-link {
+  margin-right: 16px;
+}
+
+.logo {
+  height: 1em;
+  filter: invert(100%);
 }
