PPXDCS-36 Add frontend authentication

--- a/xdcs-frontend/src/app/agents/agents.component.html
+++ b/xdcs-frontend/src/app/agents/agents.component.html
@@ -1,4 +1,4 @@
-<app-navbar [containerBound]="true"></app-navbar>
+<app-navbar></app-navbar>
 <div class="container">
   <h2>Agents</h2>
   <ul class="heroes">
