--- a/xdcs-frontend/src/app/element/navbar/navbar.component.less
+++ b/xdcs-frontend/src/app/element/navbar/navbar.component.less
@@ -13,6 +13,7 @@ nav {
   font-size: 2rem;
   margin: 0 42px 0 0;
   font-weight: bold;
+  padding: 0;
 }
 
 .nav-button {
@@ -26,4 +27,5 @@ nav {
 .logo {
   height: 1em;
   filter: invert(100%);
+  vertical-align: center;
 }
