--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -39,6 +39,10 @@ a, a:hover, a:visited, a:link, a:active, a:focus {
   color: #cb2431;
 }
 
+.icon-greyed-out {
+  color: #b0b0b0;
+}
+
 app-root {
   min-height: 100vh;
 }
