--- a/xdcs-frontend/src/app/element/node-card/node-card.component.less
+++ b/xdcs-frontend/src/app/element/node-card/node-card.component.less
@@ -34,3 +34,12 @@ h5 {
     color: gray;
   }
 }
+
+.unknown-name {
+  font-style: italic;
+  color: gray;
+
+  &:after {
+    content: 'Unknown';
+  }
+}
