PPXDCS-66 Create task definition configuration view

--- a/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
+++ b/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div style="width: 100%; position: relative" class="flex-fill">
+<div style="width: 100%; position: relative" class="container-fluid flex-fill">
   <as-split unit="percent" style="position: absolute; top:0;bottom: 0;left:0;right:0;">
     <as-split-area size="20">
       TBD
@@ -8,7 +8,7 @@
       <app-code-editor></app-code-editor>
     </as-split-area>
     <as-split-area size="20">
-      TBD
+      <app-task-def-config></app-task-def-config>
     </as-split-area>
   </as-split>
 </div>
