PPXDCS-47 Add task definitions list view
* Create task definition list view
* Add fullscreen list
* Add modal

--- a/xdcs-frontend/src/app/element/task-summary-item/task-summary-item.component.html
+++ b/xdcs-frontend/src/app/element/task-summary-item/task-summary-item.component.html
@@ -1,6 +1,6 @@
 <div class="item row card transition-smooth"
      [ngClass]="!isCollapsed ? 'shadow' : 'shadow-sm'">
-  <div style="position: relative">
+  <div class="position-relative">
     <div class="card-body item-summary">
       <span [ngSwitch]="status">
         <fa-icon
