PPXDCS-76 Design file tree view

--- a/xdcs-frontend/src/app/element/code-editor/code-editor.component.html
+++ b/xdcs-frontend/src/app/element/code-editor/code-editor.component.html
@@ -9,6 +9,5 @@
     [readOnly]="false"
     [autoUpdateContent]="true"
     [durationBeforeCallback]="1000"
-    (textChanged)="onChange($event)"
-    style="overflow: auto; height: 100%"></ace-editor>
+    (textChanged)="onTextChange($event)"></ace-editor>
 </div>
