--- a/xdcs-frontend/src/app/view/task-definitions/task-definitions.component.html
+++ b/xdcs-frontend/src/app/view/task-definitions/task-definitions.component.html
@@ -5,7 +5,7 @@
       <div>
         <button type="button"
                 class="btn btn-outline-success float-right"
-                openModal [modal]="NewTaskDefinitionComponent">New task definition</button>
+                appOpenModal [modal]="NewTaskDefinitionComponent">New task definition</button>
         <div class="clearfix"></div>
       </div>
     </ng-template>
