--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -1,4 +1,5 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "~angular-tree-component/dist/angular-tree-component.css";
 @import "styles/basic";
 
 a, a:hover, a:visited, a:link, a:active, a:focus {
