--- a/xdcs-frontend/src/app/element/task-def-config/task-def-config.component.html
+++ b/xdcs-frontend/src/app/element/task-def-config/task-def-config.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div>
   <label for="conf-name">Task definition name</label>
   <input type="text"
          class="form-control mb-3"
