--- a/xdcs-frontend/src/app/view/task-definition/task-definition.component.less
+++ b/xdcs-frontend/src/app/view/task-definition/task-definition.component.less
@@ -6,3 +6,22 @@
 as-split {
   height: 100%;
 }
+
+.split-area-container {
+  padding: 1rem;
+}
+
+
+.code-editor-area {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.code-editor-toolbar-wrapper {
+  flex-grow: 0;
+}
+
+.code-editor-wrapper {
+  flex-grow: 1;
+}
