--- a/xdcs-frontend/src/app/element/navbar/navbar.component.html
+++ b/xdcs-frontend/src/app/element/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="shadow">
+<div [ngClass]="fullscreenMode ? 'fullscreen wrapper' : 'shadow wrapper'">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" routerLink="/">
       <img class="logo" src="assets/logo.svg" alt="XDCS"/>
