--- a/xdcs-frontend/src/app/element/navbar/navbar.component.less
+++ b/xdcs-frontend/src/app/element/navbar/navbar.component.less
@@ -2,7 +2,15 @@
   background-color: rgb(39, 39, 39);
   display: block;
   padding: 0;
+  margin: 0;
+}
+
+.wrapper {
   margin: 0 0 36px;
+}
+
+.fullscreen {
+  margin-bottom: 0 !important;
 }
 
 nav {
