--- a/xdcs-frontend/src/app/view/task-definitions/task-definitions.component.html
+++ b/xdcs-frontend/src/app/view/task-definitions/task-definitions.component.html
@@ -1,11 +1,12 @@
-<app-navbar></app-navbar>
-<div class="container-fluid">
+<app-navbar [fullscreenMode]="true"></app-navbar>
+<div class="flex-fill">
   <app-fullscreen-list [data]="definitionList">
     <ng-template #header let-item="header">
       <div>
         <button type="button"
                 class="btn btn-outline-success float-right"
-                appOpenModal [modal]="NewTaskDefinitionComponent">New task definition</button>
+                appOpenModal [modal]="NewTaskDefinitionComponent">New task definition
+        </button>
         <div class="clearfix"></div>
       </div>
     </ng-template>
