PPXDCS-99 Create a POC of a Docker task on agent

--- a/xdcs-frontend/src/app/element/fullscreen-list/fullscreen-list.component.html
+++ b/xdcs-frontend/src/app/element/fullscreen-list/fullscreen-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex-fill h-100">
+<div class="flex-fill">
   <as-split unit="percent"
             appSizeFill [fillHeight]="true">
     <as-split-area size="30" class="left-window">
