--- a/xdcs-frontend/src/app/view/task-definitions/task-definitions.component.html
+++ b/xdcs-frontend/src/app/view/task-definitions/task-definitions.component.html
@@ -4,7 +4,8 @@
     <div>
       <button type="button"
               class="btn btn-outline-success float-right"
-              appOpenModal [modal]="NewTaskDefinitionComponent" (modalHidden)="onModalHidden()">New task definition
+              appOpenModal [modal]="NewTaskDefinitionComponent" (modalHidden)="onModalHidden()">
+        New task definition
       </button>
       <div class="clearfix"></div>
     </div>
