--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -64,3 +64,15 @@ a, a:hover, a:visited, a:link, a:active, a:focus {
 app-root {
   min-height: 100vh;
 }
+
+.btn-icon {
+  fa-icon {
+    margin: 0 !important;
+  }
+
+  padding: 0.1rem 0.5rem;
+
+  &:hover {
+    filter: brightness(0.5);
+  }
+}
